force-app/main/default/objects/Contact/fields/Date_of_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Adoption__c</fullName>
    <label>Date of Adoption</label>
    <type>Date</type>
</CustomField>