force-app/main/default/objects/Contact/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>It is a standard help text.
But cannot use next line, bold
Character limit around 500 character</inlineHelpText>
    <label>Date of Birth ⓕ</label>
    <type>Date</type>
</CustomField>