force-app/main/default/objects/Contact/fields/Date_report_made__c.field-meta.xml
<CustomField>
    <fullName>Date_report_made__c</fullName>
    <label>Date report made</label>
    <type>Date</type>
</CustomField>