force-app/main/default/objects/Contact/fields/Death_Approximate_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Approximate_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approximate Date</label>
    <type>Checkbox</type>
</CustomField>