force-app/main/default/objects/Contact/fields/Death_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate__c</fullName>
    <formula>IF( ISBLANK(Date_of_Death__c)  ,&apos;&apos;, IF( NOT( ISBLANK( Death_Certificate_Document_ID__c ) ) , 
HYPERLINK(&quot;/&quot; &amp;Death_Certificate_Document_ID__c,&apos;View file&apos;,&apos;_self&apos;)&amp; &apos;               &apos; ,&apos;Upload file&apos; &amp; &apos;              &apos;)   &amp; HYPERLINK(&apos;/lightning/cmp/c__filePreviewCmp?c__recordId=&apos;&amp; Id &amp;
&apos;&amp;c__fileType=Death Certificate&apos;,IMAGE(&apos;/resource/UploadIcon&apos;,&apos;Upload&apos;,20,20) ,&apos;_self&apos;))</formula>
    <label>Death Certificate</label>
    <type>Text</type>
</CustomField>