force-app/main/default/objects/Contact/fields/Death_Certificate_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Document_ID__c</fullName>
    <label>Death Certificate Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>