force-app/main/default/objects/Contact/fields/Does_Client_have_insurance__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_have_insurance__c</fullName>
    <label>Does Client have insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>