force-app/main/default/objects/Contact/fields/Does_ICWA_apply_to_the_child__c.field-meta.xml
<CustomField>
    <fullName>Does_ICWA_apply_to_the_child__c</fullName>
    <label>Does ICWA apply to the child?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>