force-app/main/default/objects/Contact/fields/Firstname_soundex_keycode__c.field-meta.xml
<CustomField>
    <fullName>Firstname_soundex_keycode__c</fullName>
    <label>Firstname soundex keycode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>