force-app/main/default/objects/Contact/fields/Glasses__c.field-meta.xml
<CustomField>
    <fullName>Glasses__c</fullName>
    <label>Glasses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>