force-app/main/default/objects/Contact/fields/Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Hair_Color__c</fullName>
    <label>Hair Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blonde</fullName>
            </value>
            <value>
                <fullName>Light Brown</fullName>
            </value>
            <value>
                <fullName>Dark Brown</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Non-traditional Color</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>