force-app/main/default/objects/Contact/fields/Hair_Texture__c.field-meta.xml
<CustomField>
    <fullName>Hair_Texture__c</fullName>
    <label>Hair Texture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>Wavy</fullName>
            </value>
            <value>
                <fullName>Curly</fullName>
            </value>
            <value>
                <fullName>Coiled/Kinky</fullName>
            </value>
            <value>
                <fullName>Bald/Balding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>