force-app/main/default/objects/Contact/fields/Has_Child_Ever_Been_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Ever_Been_Adopted__c</fullName>
    <label>Has Child Ever Been Adopted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>