force-app/main/default/objects/Contact/fields/Has_the_Child_Guardianship__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Child_Guardianship__c</fullName>
    <inlineHelpText>Has the Child Ever Experienced a Guardianship Prior to this Removal?</inlineHelpText>
    <label>Has the Child  Guardianship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>