force-app/main/default/objects/Contact/fields/Height_in_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_in_Inches__c</fullName>
    <label>Height in Inches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>