force-app/main/default/objects/Contact/fields/Hispanic_Latino_Origin__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Latino_Origin__c</fullName>
    <label>Hispanic/Latino Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>