force-app/main/default/objects/Contact/fields/If_yes_describe_the_physical_marks__c.field-meta.xml
<CustomField>
    <fullName>If_yes_describe_the_physical_marks__c</fullName>
    <label>If yes, describe the physical marks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>