force-app/main/default/objects/Contact/fields/If_yes_describe_the_tattoo__c.field-meta.xml
<CustomField>
    <fullName>If_yes_describe_the_tattoo__c</fullName>
    <label>If yes, describe the tattoo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>