force-app/main/default/objects/Contact/fields/If_yes_identify_the_federally_tribe_s__c.field-meta.xml
<CustomField>
    <fullName>If_yes_identify_the_federally_tribe_s__c</fullName>
    <label>If yes, identify the federally tribe(s)?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Child_a_member_in_federal_Tribe__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chickahominy Indian Tribe</fullName>
            </value>
            <value>
                <fullName>Chickahominy Indian Tribe--Eastern Division</fullName>
            </value>
            <value>
                <fullName>Monacan Indian Nation</fullName>
            </value>
            <value>
                <fullName>Nansemond Indian Nation</fullName>
            </value>
            <value>
                <fullName>Pamunkey Indian Tribe</fullName>
            </value>
            <value>
                <fullName>Rappahannock Tribe, Inc.</fullName>
            </value>
            <value>
                <fullName>Upper Mattaponi Tribe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>