force-app/main/default/objects/Contact/fields/Intake_Person_Role__c.field-meta.xml
<CustomField>
    <fullName>Intake_Person_Role__c</fullName>
    <label>Person Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adoptive Parent</fullName>
            </value>
            <value>
                <fullName>Adult Biological Child</fullName>
            </value>
            <value>
                <fullName>Adult Child</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Alleged Maltreator</fullName>
            </value>
            <value>
                <fullName>Alleged Victim</fullName>
            </value>
            <value>
                <fullName>Biological Child</fullName>
            </value>
            <value>
                <fullName>Biological Parent</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>CASA Worker</fullName>
            </value>
            <value>
                <fullName>Casehead</fullName>
                <isActive>false</isActive>
                <label>Casehead</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Child Attorney</fullName>
            </value>
            <value>
                <fullName>Child Day Care Provider</fullName>
            </value>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Court Therapist</fullName>
            </value>
            <value>
                <fullName>CPS Hist. Clrnc.- Requestor</fullName>
            </value>
            <value>
                <fullName>CPS Hist. Clrnc. - Subject</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Enhanced Aftercare Recipient</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>Friend/Neighbor</fullName>
            </value>
            <value>
                <fullName>I &amp; R Participant</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Legal Representive</fullName>
            </value>
            <value>
                <fullName>Medical Professional</fullName>
            </value>
            <value>
                <fullName>Mental Health Professional</fullName>
            </value>
            <value>
                <fullName>Non-Victim Child</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>