force-app/main/default/objects/Contact/fields/Intake_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Intake_Purpose__c</fullName>
    <label>Intake Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Protective Services</fullName>
            </value>
            <value>
                <fullName>Child Protective Services</fullName>
            </value>
            <value>
                <fullName>Request for services</fullName>
            </value>
            <value>
                <fullName>Information and Referral</fullName>
            </value>
            <value>
                <fullName>Adult Services</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <default>true</default>
                <label>Others</label>
            </value>
            <value>
                <fullName>Child Welfare Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>