force-app/main/default/objects/Contact/fields/Is_this_child_an_Indian_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_this_child_an_Indian_Child__c</fullName>
    <label>Is this child an Indian Child?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>