force-app/main/default/objects/Contact/fields/Jn_Id__c.field-meta.xml
<CustomField>
    <fullName>Jn_Id__c</fullName>
    <label>Jn Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>