force-app/main/default/objects/Contact/fields/Jn_Object_Handler__c.field-meta.xml
<CustomField>
    <fullName>Jn_Object_Handler__c</fullName>
    <label>Jn Object Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>