force-app/main/default/objects/Contact/fields/Judiciary_Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Judiciary_Case_Date__c</fullName>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>