force-app/main/default/objects/Contact/fields/Judiciary_case_search_link__c.field-meta.xml
<CustomField>
    <fullName>Judiciary_case_search_link__c</fullName>
    <formula>HYPERLINK(&apos;https://eapps.courts.state.va.us/ocis/landing&apos;, &apos;https://eapps.courts.state.va.us/ocis/landing&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judiciary case search link</label>
    <type>Text</type>
</CustomField>