force-app/main/default/objects/Contact/fields/Lastname_soundex_keycode__c.field-meta.xml
<CustomField>
    <fullName>Lastname_soundex_keycode__c</fullName>
    <label>Lastname soundex keycode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>