force-app/main/default/objects/Contact/fields/License_Document__c.field-meta.xml
<CustomField>
    <fullName>License_Document__c</fullName>
    <formula>IF( ISBLANK( State_Id_Drivers_License__c ) ,&apos;&apos;, IF( NOT( ISBLANK( License_Document_Id__c ) ) ,
HYPERLINK(&quot;/&quot; &amp;	License_Document_Id__c,&apos;View file&apos;,&apos;_self&apos;)&amp; &apos;               &apos; ,&apos;Upload file&apos; &amp; &apos;              &apos;) &amp; HYPERLINK(&apos;/lightning/cmp/c__filePreviewCmp?c__recordId=&apos;&amp; Id &amp;
&apos;&amp;c__fileType=License&apos; ,IMAGE(&apos;/resource/UploadIcon&apos;,&apos;Upload&apos;,20,20) ,&apos;_self&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Document</label>
    <type>Text</type>
</CustomField>