force-app/main/default/objects/Contact/fields/License_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>License_Document_Id__c</fullName>
    <label>License Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>