force-app/main/default/objects/Contact/fields/Living_Situation_Description__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation_Description__c</fullName>
    <label>Living Situation Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>