force-app/main/default/objects/Contact/fields/Name_of_non_federal_Tribe__c.field-meta.xml
<CustomField>
    <fullName>Name_of_non_federal_Tribe__c</fullName>
    <label>Name of non-federal Tribe</label>
    <length>60</length>
    <type>Text</type>
</CustomField>