force-app/main/default/objects/Contact/fields/National_Human_Trafficking_Hotline__c.field-meta.xml
<CustomField>
    <fullName>National_Human_Trafficking_Hotline__c</fullName>
    <formula>HYPERLINK(&quot;https://humantraffickinghotline.org/en/report-trafficking&quot;, &quot;Report Trafficking&quot;,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Human Trafficking Hotline</label>
    <type>Text</type>
</CustomField>