force-app/main/default/objects/Contact/fields/National_Sex_Offender_Date__c.field-meta.xml
<CustomField>
    <fullName>National_Sex_Offender_Date__c</fullName>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>