force-app/main/default/objects/Contact/fields/Nationality_del_del__c.field-meta.xml
<CustomField>
    <fullName>Nationality_del_del__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_a_US_citizen__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Algerian</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Andorran</fullName>
            </value>
            <value>
                <fullName>Angolan</fullName>
            </value>
            <value>
                <fullName>Antiguan</fullName>
            </value>
            <value>
                <fullName>Argentinean</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Austronesian - Malayo - Polynesian</fullName>
            </value>
            <value>
                <fullName>Azerbaijani</fullName>
            </value>
            <value>
                <fullName>Bahamian</fullName>
            </value>
            <value>
                <fullName>Bahraini</fullName>
            </value>
            <value>
                <fullName>Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Barbadian</fullName>
            </value>
            <value>
                <fullName>Belarusian</fullName>
            </value>
            <value>
                <fullName>Belgian</fullName>
            </value>
            <value>
                <fullName>Belizean</fullName>
            </value>
            <value>
                <fullName>Beninese</fullName>
            </value>
            <value>
                <fullName>Bhutanese</fullName>
            </value>
            <value>
                <fullName>Bolivian</fullName>
            </value>
            <value>
                <fullName>Bosnian &amp; Herzegovina</fullName>
            </value>
            <value>
                <fullName>Bosnian &amp; Herzegovina Botswanans</fullName>
            </value>
            <value>
                <fullName>Brazilian</fullName>
            </value>
            <value>
                <fullName>Bruneian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>