force-app/main/default/objects/Contact/fields/No_Co_Applicant__c.field-meta.xml
<CustomField>
    <fullName>No_Co_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Co-Applicant</label>
    <type>Checkbox</type>
</CustomField>