force-app/main/default/objects/Contact/fields/Person_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Person_Image_URL__c</fullName>
    <defaultValue>&quot;https://casevault-dev-ed--c.vf.force.com/resource/1665391669000/unknownpersonImg&quot;</defaultValue>
    <label>Person Image URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>