force-app/main/default/objects/Contact/fields/Person_Role_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Person_Role_Dependent__c</fullName>
    <label>Person role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Intake_Purpose__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Person_Role</valueSetName>
    </valueSet>
</CustomField>