force-app/main/default/objects/Contact/fields/PersonalInfo_Verified__c.field-meta.xml
<CustomField>
    <fullName>PersonalInfo_Verified__c</fullName>
    <formula>NOT(ISBLANK( LastName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified(Filled Lastname)</label>
    <type>Checkbox</type>
</CustomField>