force-app/main/default/objects/Contact/fields/Physical_and_Mental__c.field-meta.xml
<CustomField>
    <fullName>Physical_and_Mental__c</fullName>
    <inlineHelpText>2c. Applicant&apos;s current functioning in relation to the development tasks of adulthood: Physical and Mental</inlineHelpText>
    <label>2c. Physical and Mental</label>
    <type>TextArea</type>
</CustomField>