force-app/main/default/objects/Contact/fields/Physical_Marks__c.field-meta.xml
<CustomField>
    <fullName>Physical_Marks__c</fullName>
    <label>Physical Marks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>