force-app/main/default/objects/Contact/fields/Placement_Structure__c.field-meta.xml
<CustomField>
    <fullName>Placement_Structure__c</fullName>
    <label>Placement Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>